Create flexbox directory & add order property of flexbox in learning

--- a/03-css-advanced/css-advance-learning/flexbox/style.css
+++ b/03-css-advanced/css-advance-learning/flexbox/style.css
@@ -27,8 +27,18 @@ body {
 
 .item-3 {
   flex-grow: 1;
+  order: -1;
 }
 
 .item-7 {
   flex-grow: 3;
+  order: -2;
+}
+
+.item-1 {
+  order: -3;
+}
+
+.parent > div:nth-child(even) {
+  background: green;
 }
